tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-qualified-enum-match-pattern.wyst
module syntax.legacy_qualified_enum_match_pattern

enum Message: u8 {
    Write
}

fn rejected(message: Message) -> u64 {
    match message {
        Message.Write { return 1 }
    }
}
